--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
     "react-scripts": "3.1.1",
+    "react-select": "^3.0.4",
     "redux": "^4.0.4",
     "redux-form": "^8.2.6"
   },
